cluster/homelab/apps/adminer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app.kubernetes.io/instance: adminer
    app.kubernetes.io/name: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: adminer
      app.kubernetes.io/name: adminer
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: adminer
        app.kubernetes.io/name: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
