cluster/homelab/apps/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app.kubernetes.io/instance: adminer
    app.kubernetes.io/name: adminer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
