cluster/homelab/apps/adminer/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adminer-internal
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "adminer.sgenov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adminer
          port: 80
